added ardalis endpoints to the project and setup the endpoints

--- a/Estarta Application/Estarta Application.csproj
+++ b/Estarta Application/Estarta Application.csproj
@@ -9,12 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <Compile Remove="Controllers\Employee\GetEmpStatusEndpoint.GetEmpStatusRequest.cs" />
+    <Compile Remove="Controllers\Employee\GetEmpStatusEndpoint.GetEmpStatusResponse.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <None Include="Controllers\Employee\GetEmpStatusEndpoint.GetEmpStatusRequest.cs" />
+    <None Include="Controllers\Employee\GetEmpStatusEndpoint.GetEmpStatusResponse.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Ardalis.ApiEndpoints" Version="4.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
 
 </Project>
