added DDD aggregation classes and the user entity

--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared Kernal\Shared Kernal.csproj" />
+  </ItemGroup>
+
 </Project>
