--- a/EstartaApplicationServer/EstartaApplicationServer.csproj
+++ b/EstartaApplicationServer/EstartaApplicationServer.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\IOC\IOC.csproj" />
+    <ProjectReference Include="..\Shared Kernal\Shared Kernal.csproj" />
   </ItemGroup>
 
 </Project>
