added authorization to app

--- a/EstartaApplicationServer/appsettings.Development.json
+++ b/EstartaApplicationServer/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=/app/EstartaApp.db"
+  },
+  "Jwt": {
+    "Secret": "kmaslkdmlaksmdlakmsdlakmsdlaksmdlaksdmkla",
+    "Issuer": "backend",
+    "Audience": "frontend"
   }
 }
