--- a/EstartaApplicationServer/appsettings.json
+++ b/EstartaApplicationServer/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=/app/EstartaApp.db"
+  },
+  "Jwt": {
+    "Secret": "kmaslkdmlaksmdlakmsdlakmsdlaksmdlaksdmkla",
+    "Issuer": "backend",
+    "Audience": "frontend"
+  }
 }
