--- a/host/host.csproj
+++ b/host/host.csproj
@@ -36,10 +36,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Employee.Api\Emp.Api.csproj" />
     <ProjectReference Include="..\Employee\Employe.IOC\Emp.IOC.csproj" />
-    <ProjectReference Include="..\Employee\Employee.Infrastructure\Emp.Infrastructure.csproj" />
-    <ProjectReference Include="..\Employee\IOC\Employee.IOC.csproj" />
+    <ProjectReference Include="..\Employee\Employee.Application\Emp.Application.csproj" />
     <ProjectReference Include="..\Shared Kernal\Shared Kernal.csproj" />
   </ItemGroup>
+
 
 
 </Project>
