--- a/EstartaApplicationServer/appsettings.json
+++ b/EstartaApplicationServer/appsettings.json
@@ -6,11 +6,29 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=C:\\Users\\mtarek\\source\\repos\\Estarta-Application\\EstartaApplicationServer\\EstartaApp.db"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=EOM_DEV;User Id=dev;Password=Qwertyuiop@1234567890;Trusted_Connection=True;TrustServerCertificate=true"
   },
-  "Jwt": {
-    "Secret": "kmaslkdmlaksmdlakmsdlakmsdlaksmdlaksdmkla",
-    "Issuer": "backend",
-    "Audience": "frontend"
+  "IDMSettings": {
+    "IDM": {
+      "Url": "https://10.96.128.120:9099",
+      "ClientName": "LMS",
+      "ExternalDashboardClientId": 19,
+      "InternalDashboardClientId": 22,
+      // every one set you certificate path 
+      "CertificatePath": "C:\\IDM Cer\\idm_valu.live.crt",
+      "NotVerfiedUserSettings": {
+        "RoleId": "6912c648-cb39-46d4-9c2b-e5ae7ad4390a",
+        "UserType": 1,
+        "ClientId": 19,
+        "SecretKey": "t3*7'>GsCgdQC4]?",
+        "BaseUrl": "https://10.96.128.120:9099"
+
+      }
+
+    },
+    "Roles": {
+      "RiskRole": "",
+      "CustomerRole": "6912c648-cb39-46d4-9c2b-e5ae7ad4390a"
+    }
   }
 }
