--- a/EstartaApplicationServer/Client host.csproj
+++ b/EstartaApplicationServer/Client host.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\Shared Kernal\Shared Kernal.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
