create and get for branch

--- a/Admin Host/appsettings.json
+++ b/Admin Host/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=EOM_DEV;User Id=dev;Password=Qwertyuiop@1234567890;Trusted_Connection=True;TrustServerCertificate=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=EOM_DEV;User Id=dev;Password=Qwertyuiop@1234567890;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
